fix z-index on the menu-burger

--- a/src/scss/media/_media_768.scss
+++ b/src/scss/media/_media_768.scss
@@ -76,6 +76,10 @@
     &__subtitle {
       @include fwfslh(normal, 20px, 30px);
     }
+
+    &__content {
+      z-index: -1;
+    }
   }
 
   .button {
